--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -67,3 +67,13 @@ test:
         # low amounts for fast failures.
         max_retries: 1
         retry_interval: 0
+production:
+  sessions:
+    default:
+      # The standard MongoDB connection URI allows for easy
+      # replica set connection setup.
+      # Use environment variables or a config file to keep your
+      # credentials safe.
+      uri: 'mongodb://admin:cx2utr7pb@kahana.mongohq.com:10052/Pollard'
+
+      options:
